# fluxx

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  find_sources.py  source.cmake
.github/workflows/: release.yml
config/: cards.json  cards_debug.json
docs/html/: CMakeLists_8txt.html  actions_8cpp.html  actions_8cpp.js  actions_8hpp.html  actions_8hpp.js  actions_8hpp_source.html  annotated.html  annotated_dup.js  card_8cpp.html  card_8hpp.html  card_8hpp.js  card_8hpp_source.html  classCard-members.html  classCard.html  classCard.js  classCardAction-members.html  classCardAction.html  classCardAction.js  classCardGoal-members.html  classCardGoal.html  classCardGoal.js  classCardRule-members.html  classCardRule.html  classCardRule.js  classCardTheme-members.html  classCardTheme.html  classCardTheme.js  classPlayer-members.html  classPlayer.html  classPlayer.js  classState-members.html  classState.html  classState.js  classes.html  core_8cpp.html  core_8cpp.js  core_8hpp.html  core_8hpp.js  core_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+44 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+7 more)
include/: actions.hpp  card.hpp  core.hpp  gamegui.hpp  gui.hpp  main.hpp  player.hpp  state.hpp
src/: actions.cpp  card.cpp  core.cpp  gamegui.cpp  gui.cpp  main.cpp  player.cpp  state.cpp
